--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-﻿<!DOCTYPE html>;
-<html lang=&quot;en&quot;>;
+﻿<!DOCTYPE html>
+<html lang="en">
 
-<head>;
-    <meta charset=&quot;UTF-8&quot;>;
-    <meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;>;
-    <title>;山羊の前端小窝</title>;
-    <style>;
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>山羊の前端小窝</title>
+    <style>
         * {
             padding: 0;
             margin: 0;
@@ -15,8 +15,7 @@
             width: 100%;
             height: 100vh;
             /* 背景渐变 */
-            background-image: linear-gradient(-225deg, #231557 0%,
-                    #43107a 29%, #FF1361 100%);
+            background-image: linear-gradient(-225deg, #231557 0%, #43107a 29%, #FF1361 100%);
         }
 
         canvas {
@@ -24,18 +23,17 @@
             width: 100%;
             height: 100%;
         }
-    </style>;
-</head>;
+    </style>
+</head>
 
-<body>;
+<body>
 
-    <canvas>;</canvas>;
+    <canvas></canvas>
 
-</body>;
-<script>;
-
+</body>
+<script>
     // 定义星星的颜色
-    const STAR_COLOR = &#39;#fff&#39;;
+    const STAR_COLOR = '#fff';
     // 定义星星的大小
     const STAR_SIZE = 3;
     // 定义星星的最小缩放比例
@@ -45,9 +43,9 @@
     // 定义星星的数量
     const STAR_COUNT = (window.innerWidth + window.innerHeight) / 8;
     // 获取canvas元素
-    const canvas = document.querySelector(&#39;canvas&#39;);
+    const canvas = document.querySelector('canvas');
     // 获取canvas的绘图上下文
-    const context = canvas.getContext(&#39;2d&#39;);
+    const context = canvas.getContext('2d');
     // 定义缩放比例
     let scale = 1; // device pixel ratio
     // 定义宽度和高度
@@ -95,49 +93,49 @@
     }
     // 回收星星并重新放置到新的位置
     function recycleStar(star) {
-        // 初始化方向为 &#39;z&#39;
-        let direction = &#39;z&#39;;
+        // 初始化方向为 'z'
+        let direction = 'z';
         // 获取速度的绝对值
         let vx = Math.abs(velocity.x);
         let vy = Math.abs(velocity.y);
         // 如果速度的绝对值大于1，则根据速度的大小随机确定方向
-        if (vx >; 1 || vy >; 1) {
+        if (vx > 1 || vy > 1) {
             let axis;
             // 如果水平速度大于垂直速度，则根据水平速度的比例随机确定水平或垂直方向
-            if (vx >; vy) {
-                axis = Math.random() < vx / (vx + vy) ? &#39;h&#39; : &#39;v&#39;;
+            if (vx > vy) {
+                axis = Math.random() < vx / (vx + vy) ? 'h' : 'v';
             } else {
-                axis = Math.random() < vy / (vx + vy) ? &#39;v&#39; : &#39;h&#39;;
+                axis = Math.random() < vy / (vx + vy) ? 'v' : 'h';
             }
             // 根据方向确定具体的移动方向
-            if (axis === &#39;h&#39;) {
-                direction = velocity.x >; 0 ? &#39;l&#39; : &#39;r&#39;;
+            if (axis === 'h') {
+                direction = velocity.x > 0 ? 'l' : 'r';
             } else {
-                direction = velocity.y >; 0 ? &#39;t&#39; : &#39;b&#39;;
+                direction = velocity.y > 0 ? 't' : 'b';
             }
         }
         // 随机设置星星的缩放比例
         star.z = STAR_MIN_SCALE + Math.random() * (1 - STAR_MIN_SCALE);
         // 根据方向设置星星的位置
-        if (direction === &#39;z&#39;) {
-            // 如果方向为 &#39;z&#39;，则将星星放置在屏幕中心
+        if (direction === 'z') {
+            // 如果方向为 'z'，则将星星放置在屏幕中心
             star.z = 0.1;
             star.x = Math.random() * width;
             star.y = Math.random() * height;
-        } else if (direction === &#39;l&#39;) {
-            // 如果方向为 &#39;l&#39;，则将星星放置在屏幕左侧
+        } else if (direction === 'l') {
+            // 如果方向为 'l'，则将星星放置在屏幕左侧
             star.x = -OVERFLOW_THRESHOLD;
             star.y = height * Math.random();
-        } else if (direction === &#39;r&#39;) {
-            // 如果方向为 &#39;r&#39;，则将星星放置在屏幕右侧
+        } else if (direction === 'r') {
+            // 如果方向为 'r'，则将星星放置在屏幕右侧
             star.x = width + OVERFLOW_THRESHOLD;
             star.y = height * Math.random();
-        } else if (direction === &#39;t&#39;) {
-            // 如果方向为 &#39;t&#39;，则将星星放置在屏幕顶部
+        } else if (direction === 't') {
+            // 如果方向为 't'，则将星星放置在屏幕顶部
             star.x = width * Math.random();
             star.y = -OVERFLOW_THRESHOLD;
-        } else if (direction === &#39;b&#39;) {
-            // 如果方向为 &#39;b&#39;，则将星星放置在屏幕底部
+        } else if (direction === 'b') {
+            // 如果方向为 'b'，则将星星放置在屏幕底部
             star.x = width * Math.random();
             star.y = height + OVERFLOW_THRESHOLD;
         }
@@ -174,7 +172,7 @@
         velocity.x += (velocity.tx - velocity.x) * 0.8;
         velocity.y += (velocity.ty - velocity.y) * 0.8;
         // 遍历所有星星
-        stars.forEach((star) =>; {
+        stars.forEach((star) => {
             // 根据速度和缩放比例更新星星的位置
             star.x += velocity.x * star.z;
             star.y += velocity.y * star.z;
@@ -186,9 +184,9 @@
             // 如果星星超出屏幕范围，则重新放置到屏幕上
             if (
                 star.x < -OVERFLOW_THRESHOLD ||
-                star.x >; width + OVERFLOW_THRESHOLD ||
+                star.x > width + OVERFLOW_THRESHOLD ||
                 star.y < -OVERFLOW_THRESHOLD ||
-                star.y >; height + OVERFLOW_THRESHOLD
+                star.y > height + OVERFLOW_THRESHOLD
             ) {
                 recycleStar(star);
             }
@@ -197,10 +195,10 @@
     // 绘制星星
     function render() {
         // 遍历所有星星
-        stars.forEach((star) =>; {
+        stars.forEach((star) => {
             // 设置绘制星星的样式
             context.beginPath();
-            context.lineCap = &#39;round&#39;;
+            context.lineCap = 'round';
             context.lineWidth = STAR_SIZE * star.z * scale;
             context.globalAlpha = 0.5 + 0.5 * Math.random();
             context.strokeStyle = STAR_COLOR;
@@ -221,7 +219,7 @@
     // 移动鼠标指针
     function movePointer(x, y) {
         // 如果之前有记录鼠标指针的位置，则计算鼠标指针的移动距离，并更新速度
-        if (typeof pointerX === &#39;number&#39; &amp;&amp; typeof pointerY === &#39;number&#39;) {
+        if (typeof pointerX === 'number' && typeof pointerY === 'number') {
             let ox = x - pointerX;
             let oy = y - pointerY;
             velocity.tx = velocity.tx + (ox / 8) * scale * (touchInput ? 1 : -1);
@@ -247,6 +245,6 @@
         pointerX = null;
         pointerY = null;
     }
-</script>;
+</script>
 
-</html>;
+</html>
